; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_deprecated.c_svn_wc_resolved_conflict2.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_deprecated.c_svn_wc_resolved_conflict2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@svn_wc_conflict_choose_merged = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_wc_resolved_conflict2(i8* %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 %5, i8* %6, i32 %7, i8* %8, i32* %9) #0 {
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i8*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i8*, align 8
  %20 = alloca i32*, align 8
  store i8* %0, i8** %11, align 8
  store i32* %1, i32** %12, align 8
  store i32 %2, i32* %13, align 4
  store i32 %3, i32* %14, align 4
  store i32 %4, i32* %15, align 4
  store i32 %5, i32* %16, align 4
  store i8* %6, i8** %17, align 8
  store i32 %7, i32* %18, align 4
  store i8* %8, i8** %19, align 8
  store i32* %9, i32** %20, align 8
  %21 = load i8*, i8** %11, align 8
  %22 = load i32*, i32** %12, align 8
  %23 = load i32, i32* %13, align 4
  %24 = load i32, i32* %14, align 4
  %25 = load i32, i32* %15, align 4
  %26 = call i32 @SVN_DEPTH_INFINITY_OR_EMPTY(i32 %25)
  %27 = load i32, i32* @svn_wc_conflict_choose_merged, align 4
  %28 = load i32, i32* %16, align 4
  %29 = load i8*, i8** %17, align 8
  %30 = load i32, i32* %18, align 4
  %31 = load i8*, i8** %19, align 8
  %32 = load i32*, i32** %20, align 8
  %33 = call i32* @svn_wc_resolved_conflict3(i8* %21, i32* %22, i32 %23, i32 %24, i32 %26, i32 %27, i32 %28, i8* %29, i32 %30, i8* %31, i32* %32)
  ret i32* %33
}

declare dso_local i32* @svn_wc_resolved_conflict3(i8*, i32*, i32, i32, i32, i32, i32, i8*, i32, i8*, i32*) #1

declare dso_local i32 @SVN_DEPTH_INFINITY_OR_EMPTY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
